[package]
name    = "rocksqueue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rocksqueue"
path = "src/main.rs"

[lib]
name = "rocksqueue"
path = "src/lib.rs"

[dependencies]
rocksdb            = { version = "0.22", features = ["multi-threaded-cf"] }
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
bincode            = "1"
uuid               = { version = "1", features = ["v4", "fast-rng"] }
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap            = "5"
num_cpus           = "1"
hex                = "0.4"
anyhow             = "1"
chrono             = { version = "0.4", features = ["serde"] }
bytes              = "1"
dotenvy            = "0.15"
sd-notify          = "0.4"
tonic              = "0.11"
tonic-reflection   = "0.11"
prost              = "0.12"
tokio-stream       = "0.1"
axum               = "0.7"
aws-config         = "1"
aws-sdk-s3         = "1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile       = "3"
tokio-test     = "0.4"
assert_matches = "1.5"
